# hedonica

sim/: Cargo.toml
sim/src/: game.rs  main.rs  non_nan.rs  stats.rs  types.rs
sim/src/player/: mod.rs  rand_no_trades.rs  real_player_cli.rs
