[package]
name = "sim"
version = "0.1.0"
authors = ["Michael Graczyk <michael@mgraczyk.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0.39"
serde = { version = "1.0.91", features = ["derive"] }
json5 = "0.2.4"
rand = "0.6.5"
average = { version = "0.9.4", features = ["serde1"] }
lazy_static = "1.3.0"
ctor = "0.1.9"
