[package]
name = "sim"
version = "0.1.0"
authors = ["Michael Graczyk <michael@mgraczyk.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0.41"
serde = { version = "1.0.102", features = ["derive"] }
json5 = "0.2.5"
rand = "0.7.2"
average = { version = "0.10.3", features = ["serde1"] }
lazy_static = "1.4.0"
ctor = "0.1.12"
clap = "2.33.0"
dialoguer = "0.5.0"
